sfdx-source/force-app/main/default/objects/Staging_Bulk_Upload_Reference__c/Staging_Bulk_Upload_Reference__c.object-meta.xml
<CustomObject>
    <description>LEM-15978: Stores Bulk Equipment/Photoshoot references and their status.</description>
    <label>Staging Bulk Upload Reference</label>
    <nameField>
        <displayFormat>BL-{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>Bulk Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staging Bulk Upload References</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>