sfdx-source/force-app/main/default/objects/Staging_Bulk_Upload_Reference__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>