sfdx-source/force-app/main/default/objects/Staging_Bulk_Upload_Reference__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <description>LEM-15978: Stores dependent picklist values based on the type.</description>
    <inlineHelpText>Picklist values populate based on the type.</inlineHelpText>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Net-New</fullName>
            </value>
            <value>
                <fullName>Replacement</fullName>
            </value>
            <value>
                <fullName>Return</fullName>
            </value>
            <value>
                <fullName>Marketing Kit</fullName>
            </value>
            <value>
                <fullName>Photoshoot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>