sfdx-source/force-app/main/default/objects/Staging_Bulk_Upload_Reference__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>LEM-15978: Stores file upload status - Success, In Progress Or Failed.</description>
    <inlineHelpText>It stores file upload status - Success, In Progress Or Failed.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>